--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,6 +3,7 @@ package_manager = "npm"
 
 [features]
 resolution = true
+seeds = false
 skip-lint = false
 
 [programs.localnet]
@@ -12,8 +13,8 @@ solvent = "AuXUBafybLucgxw65twLs4RrwDnXDnxnfQxRrzamiDpq"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "/home/keewe/solvent-dev-wallet.json"
+cluster = "devnet"
+wallet = "~/.config/solana/id.json" # Use the standard WSL path
 
 [scripts]
-test = "npx ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\""
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
